--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=demo
+spring.application.name=OrderStock
 spring.datasource.url=jdbc:postgresql://localhost:5432/database3
-spring.datasource.username=postgres
 spring.datasource.password=JannaDB01.
+spring.datasource.username=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.spa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
