--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=OrderStock
+spring.application.name=Stock
 spring.datasource.url=jdbc:postgresql://localhost:5432/database3
 spring.datasource.password=JannaDB01.
 spring.datasource.username=postgres
